# myspk

./: CMakeLists.txt  main.c  main.cpp  micaccess.cpp  micaccess.h  myspk.cpp  myspk.h  myspk.pro  myspk.ui  myspkmain.cpp  myspkmain.h  myspkmain.ui  palayer.cpp  palayer.h
